apps/tpi-1/service-stubs/bazarr/httproute-envoy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr-envoy
  namespace: default
spec:
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  hostnames:
  - "bazarr.${domain_wahoo_li:=wahoo.li}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /outpost.goauthentik.io
    backendRefs:
    - name: ak-outpost-proxy-default
      port: 9000
  - backendRefs:
    - name: bazarr
      port: 6767
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: bazarr-auth
  namespace: default
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: bazarr-envoy
  extAuth:
    failOpen: false
    headersToExtAuth:
    - cookie
    - authorization
    - proxy-authorization
    - x-forwarded-for
    - x-forwarded-proto
    - x-real-ip
    - accept
    http:
      backendRefs:
      - name: ak-outpost-proxy-default
        namespace: default
        port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
      - set-cookie
      - x-authentik-username
      - x-authentik-uid
      - x-authentik-name
      - x-authentik-email
      - x-authentik-groups
      - x-authentik-entitlements
      - x-authentik-jwt
